--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Eventbrite</title>
-    <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+<%= render 'layouts/head' %>
+<body>
+	<%= render 'layouts/header' %>
+	<div class="container">
+		<% flash.each do |message_type, message| %>
+		<div class="alert alert-<%= message_type %>">
+			<%= message %>
+		</div>
+		<% end %>
+		<%= yield %>
+		<%= debug(params) if Rails.env.development? %>
+	</div>
+	<%= render 'layouts/footer' %>
+</body>
 
-  <body>
-    <%= yield %>
-  </body>
 </html>
