--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,5 @@
 <h1>Bienvenue !</h1>
 <div align="center">
-	<%= link_to "Inscription", signup_path, class: "btn btn-primary" %>
+	<%= link_to "Se connecter", login_path, class: "btn btn-primary" %>
+	<%= link_to "S'inscrire", signup_path, class: "btn btn-primary" %>
 </div>
