--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -41,7 +41,7 @@
 <br>
 <% if logged_in? %>
 <div>
-	<h1>Utilisateurs inscris</h1>
+	<h1>Utilisateurs inscrits</h1>
 	<table class="table table-striped table-hover">
 		<tbody>
 			<tr>
