--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,9 @@
 <h1>Bienvenue !</h1>
-<div align="center">
+<br>
+<div class="center">
 	<%= link_to "Se connecter", login_path, class: "btn btn-primary" %>
+</div>
+<br>
+<div class="center">
 	<%= link_to "S'inscrire", signup_path, class: "btn btn-primary" %>
 </div>
