--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,10 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
-    <%= link_to "Eventbrite", root_path, id: "logo" %>
+    <%= link_to "Fiolaxie", root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <li> <%= link_to "Accueil", root_path %> </li>
-        <li> <%= link_to "Evénements", events_path %> </li>
+        <li> <%= link_to "Soirées", events_path %> </li>
         <% if logged_in? %>
         <li class="dropdown">
           <a href="#" class='dropdown-toggle' data-toggle="dropdown"> 
