--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,7 @@
 <% provide(:title, @user.name) %>
+<div class="center">
+    <%= image_tag('Galaxie.jpg', size:'800x400') %>
+</div>
 <div>
 	<h1>Ton profil</h1>
 </div>
