soiree au lieu de evenements

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,7 +23,7 @@
 <br>
 <br>
 <div>
-	<h1>Événements créés</h1>
+	<h1>Soirées créés</h1>
 	<br>
 	<table class="table table-striped table-hover">
 		<tr>
@@ -54,7 +54,7 @@
 <br>
 <br>
 <div>
-	<h1>Évenements à venir</h1>
+	<h1>Soirées à venir</h1>
 	<table class="table table-striped table-hover">
 		<tbody>
 			<tr>
@@ -83,7 +83,7 @@
 <br>  
 <br>
 <div>
-	<h1>Évenements passés</h1>
+	<h1>Soirées passés</h1>
 	<br>
 	<table class="table table-striped table-hover">
 		<tbody>
