--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -14,7 +14,7 @@
 <br>
 <br>
 <br>
-<h1>Bienvenue sur le site officiel de la Fiolaxie !</h1>
+<h1>Bienvenue sur le site officiel des gardiens de la Fiolaxie !</h1>
 <br>
 <div class="center">
 	<p>Déjà membre ? </p>
