--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,5 +1,5 @@
-<% provide(:title, 'Nouvel événement') %>
-<h1>Nouvel événement</h1>
+<% provide(:title, 'Nouvelle soirée') %>
+<h1>Nouvelle soirée</h1>
 <div class="row">
 	<div class="col-md-6 col-md-offset-3">
 		<%= form_for(@event, url: events_path) do |f| %>
@@ -11,7 +11,7 @@
 		<br>
 		<div class="input-group">
 			<span class="input-group-addon"><i class="glyphicon glyphicon-edit"></i></span>
-			<%= f.text_field :description, class: 'form-control', placeholder: "Description" %>
+			<%= f.text_field :description, class: 'form-control', placeholder: "Déscription" %>
 		</div>
 		<br>
 		<div class="input-group">
@@ -24,6 +24,8 @@
 			<%= f.text_field :place, class: 'form-control', placeholder: "Lieu" %>
 		</div>
 		<br>
-		<%= f.submit "Créer un nouvel événement", class: "btn btn-sm btn-primary" %>
-		<% end %>
+		<div class='center'>
+			<%= f.submit "Créer une nouvelle soirée", class: "btn btn-sm btn-primary" %>
+			<% end %>
+		</div>
 	</div>
