--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Inscription') %>
-<h1>Édite ton profil !</h1>
+<h1>Modification du profil</h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
@@ -7,7 +7,7 @@
 
     <div class="input-group">
       <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-      <%= f.text_field :name, class: 'form-control', placeholder: "Nom" %>
+      <%= f.text_field :name, class: 'form-control', placeholder: "Pseudo" %>
     </div>
     <br>
     <div class="input-group">
@@ -25,18 +25,15 @@
       <%= f.password_field :password_confirmation, class: 'form-control', placeholder: "Confirmation" %>
     </div>
     <br>
-    <%= f.submit "Valider", class: "btn btn-primary" %>
-    <% end %>
+    <div class='center'>
+      <%= f.submit "Modifier", class: "btn btn-primary" %>
+      <% end %>
+    </div>
     <br>
     <% if current_user == @user %>
     <%= form_for @user, method: :delete do |f| %>
 
-
-    <div class="input-group">
-      <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-      <%= f.password_field :password, class: 'form-control', placeholder: "Mot de passe" %>
-    </div>
     <br>
-    <span align="center"><%= f.submit "Supprimer le compte", class: "btn btn-primary", data: {confirm: 'Etes vous sur?' } %></span>
+    <div class="center"><%= f.submit "Supprimer le compte", class: "btn btn-danger", data: {confirm: 'Etes vous sur?' } %></div>
     <% end %>
     <% end %>
