--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,7 +7,7 @@
 		<%= render 'shared/error_messages' %>
 		<div class="input-group">
 			<span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-			<%= f.text_field :name, class: 'form-control', placeholder: "Nom" %>
+			<%= f.text_field :name, class: 'form-control', placeholder: "Pseudo" %>
 		</div>
 		<br>
 		<div class="input-group">
@@ -25,7 +25,7 @@
 			<%= f.password_field :password_confirmation, class: 'form-control', placeholder: "Confirmation" %>
 		</div>
 		<br>
-		<%= f.submit "Crée ton compte !", class: "btn btn-primary", style: "width:70%; margin-left:15%" %>
+		<%= f.submit "Rejoindre la famille !", class: "btn btn-primary", style: "width:70%; margin-left:15%" %>
 		<% end %>
 	</div>
 </div>
