ajout suppression compte et resolution faute de francais

--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -11,7 +11,7 @@
     <br>
     <div class="input-group">
       <span class="input-group-addon"><i class="glyphicon glyphicon-edit"></i></span>
-      <%= f.text_field :description, class: 'form-control', placeholder: "Déscription" %>
+      <%= f.text_field :description, class: 'form-control', placeholder: "Description" %>
     </div>
     <br>
     <div class="input-group">
