--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, "Événements") %>
+<% provide(:title, "Soirées") %>
 <div class="center">
     <%= image_tag('soiree.jpg', size:'700x400') %>
 </div>
