--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'Nouvel événement') %>
+<% provide(:title, 'Edition soirée') %>
 <h1>Modification de la soirée</h1>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
