--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
     <%= image_tag('Galaxie.jpg', size:'800x400') %>
 </div>
 <div>
-	<h1>Ton profil</h1>
+	<h1>Mon profil</h1>
 </div>
 <div>
 	<section class="user_info">
